...

    func logout() {
        let alert = UIAlertController(
                title: "Пока, пока!",
                message: "Уверены что хотите выйти?",
                preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "LogoutAlert"

        let yes = UIAlertAction(title: "Да", style: .default) { _ in
            OAuth2TokenStorage().token = nil
            CookieHelper.cleanAll()
            let window = UIApplication.shared.windows.first!
            window.rootViewController = SplashViewController()
            window.makeKeyAndVisible()
        }
        yes.accessibilityIdentifier = "LogoutAlertYes"

        let no = UIAlertAction(title: "Нет", style: .default)
        no.accessibilityIdentifier = "LogoutAlertNo"

        alert.addAction(yes)
        alert.addAction(no)
...
