...
    }()
    private lazy var addToFavoriteButton: UIButton = {
        let addToFavoriteButton = UIButton(type: .custom)
        addToFavoriteButton.translatesAutoresizingMaskIntoConstraints = false
        addToFavoriteButton.setImage(heartImage, for: .normal)
        addToFavoriteButton.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
        addToFavoriteButton.accessibilityIdentifier = "Like"
        addToFavoriteButton.isAccessibilityElement = true
        return addToFavoriteButton
    }()
    private lazy var gradientView: GradientView = {
        let gradientView = GradientView()
        gradientView.translatesAutoresizingMaskIntoConstraints = false
...
    func setDate(_ date: String) {
        dateLabel.text = date
    }

    func setIsLiked(_ isFavorite: Bool) {
        addToFavoriteButton.setImage(isFavorite ? heartFillImage : heartImage, for: .normal)
        addToFavoriteButton.accessibilityIdentifier = isFavorite ? "Unlike" : "Like"
    }

    override func prepareForReuse() {
        super.prepareForReuse()
        pictureView.kf.cancelDownloadTask()
    }
...
